--- a/19.03.20/review.html
+++ b/19.03.20/review.html
@@ -74,15 +74,14 @@
   동의하지 않음 <input type="radio" name=" ">
   <br>
   <br>
-</ol>
-<ol>
   <li>휴대폰정보 약관안내</li>
     <textarea name="name" rows="10" cols="100"></textarea>
   <br>
-  동의 <input type="radio" name=" ">
-  동의하지 않음 <input type="radio" name=" ">
+  동의 <input type="radio" name="1" checked>
+  동의하지 않음 <input type="radio" name="1">
+
 </ol>
-<!-- 교수님께 여쭤보기 -->
+
 <br>
 <br>
 1.인적사항
