--- a/19.03.20/review.html
+++ b/19.03.20/review.html
@@ -46,76 +46,74 @@
     <option value="">11월</option>
     <option value="">12월</option>
   </select>
-일: <select name="" id = "">
-  <option value="">1일</option>
-  <option value="">2일</option>
-  <option value="">3일</option>
-  <option value="">4일</option>
-  <option value="">5일</option>
-  <option value="">6일</option>
-  <option value="">7일</option>
-  <option value="">8일</option>
-  <option value="">9일</option>
-  <option value="">10일</option>
-</select>
-<br>
-휴대전화 : <input type="text" placeholder="번호를 입력하세요">
-<br>
-인증번호 : <input type="text" placeholder="인증번호를 입력하세요">
-<input type="button" value="재전송">
-<br>
-<br>
-<br>
-<ol type="1">
-  <li>개인정보 동의사항</li>
-  <textarea name="name" rows="10" cols="100"></textarea>
-<br>
-  동의<input type="radio" name=" " checked>
-  동의하지 않음 <input type="radio" name=" ">
+  일: <select name="" id="">
+    <option value="">1일</option>
+    <option value="">2일</option>
+    <option value="">3일</option>
+    <option value="">4일</option>
+    <option value="">5일</option>
+    <option value="">6일</option>
+    <option value="">7일</option>
+    <option value="">8일</option>
+    <option value="">9일</option>
+    <option value="">10일</option>
+  </select>
   <br>
+  휴대전화 : <input type="text" placeholder="번호를 입력하세요">
   <br>
-  <li>휴대폰정보 약관안내</li>
+  인증번호 : <input type="text" placeholder="인증번호를 입력하세요">
+  <input type="button" name="" value="확인">
+  <input type="button" value="재전송">
+  <br>
+
+  <ol type="1">
+    <li>개인정보 동의사항</li>
     <textarea name="name" rows="10" cols="100"></textarea>
+    <br>
+    동의<input type="radio" name=" " checked>
+    동의하지 않음 <input type="radio" name=" ">
+    <br>
+    <br>
+    <li>휴대폰정보 약관안내</li>
+    <textarea name="name" rows="10" cols="100"></textarea>
+    <br>
+    동의 <input type="radio" name="1" checked>
+    동의하지 않음 <input type="radio" name="1">
+
+  </ol>
+
   <br>
-  동의 <input type="radio" name="1" checked>
-  동의하지 않음 <input type="radio" name="1">
-
-</ol>
-
-<br>
-<br>
-1.인적사항
-<br>
-<br>
-<table width = "500px" height = "200px" border="2" id ="table1" name="tables">
-  <tr>
-    <td>한글이름</td>
-    <td colspan="3">　　　　　　　　　　　　　　　　　　　　</td>
-    <!-- <td></td>
+  <br>
+  1.인적사항
+  <br>
+  <br>
+  <table width="500px" height="200px" border="2" id="table1" name="tables">
+    <tr>
+      <td>한글이름</td>
+      <td colspan="3">　　　　　　　　　　　　　　　　　　　　</td>
+      <!-- <td></td>
     <td></td> -->
-  </tr>
-  <tr>
-    <td>영문이름</td>
-    <td colspan="3"></td>
-    <!-- <td></td>
+    </tr>
+    <tr>
+      <td>영문이름</td>
+      <td colspan="3"></td>
+      <!-- <td></td>
     <td></td> -->
-  </tr>
-  <tr>
-    <td>한자</td>
-    <td colspan="3"></td>
-    <!-- <td></td>
+    </tr>
+    <tr>
+      <td>한자</td>
+      <td colspan="3"></td>
+      <!-- <td></td>
     <td></td> -->
-  </tr>
-</table>
+    </tr>
+  </table>
 
-<br>
-<br>
-<br>
+  <br>
+  <br>
+  <br>
 
-<center><input type="button" value="가입하기">
-<input type="button" value="취소"></center>
-
-
+  <input type="button" value="가입하기">
+  <input type="button" value="취소">
 
 </body>
 
