--- a/Test/itemForm.html
+++ b/Test/itemForm.html
@@ -10,6 +10,7 @@
   <input type="text" id="text">
   <input type="button" id="sellBtn" value="구매"> <br>
   <span id="span"></span>
+  <input type="button" name="" value="test">
 </body>
 <script src="http://code.jquery.com/jquery-latest.min.js"> </script>
 
